[package]
name = "gtk-custom-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.22"
proc-macro2 = "1.0.51"


serde-xml-rs = "0.6.0"
xml-rs = "0.8.4"
#serde = { version = "1.0.152", features = ["derive"] }